3.1 针对除工作流以外的薪资计算已验证完毕
目前对于除涉及到工作流程等请假相关的，剩余组成部分以及基本实现
而后续需要对工作流这一块进行测试，但是有一定的规则：
-- BPM 流程初始化 SQL
-- > 重要说明：下面的 SQL 负责创建流程分类和表单（含固定字段名，代码将依赖这些 __vModel__ 字段名）。流程模型（审批节点图）需要你在系统后台的流程设计器中手动创建，绑定到对应表单，并使用我约定的流程标识（Key），代码会用这个 Key 来识别是哪种流程：
-- > - 请病假：hr_sick_leave
-- > - 请事假：hr_personal_leave
-- > - 补打卡：hr_clock_supplement